spacing fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,7 @@ body {
   
   /* add more space below the name heading */
     .container.text-center h1 {
-        margin-bottom: 0.75rem;
+        margin-bottom: 0.35rem;
     }
 
   .container.text-center .lead {
